syntax = "proto3";

package services;

service GetListObjects {
  rpc GetListObjects (Request) returns (Response);
}

message Request {
  string bucketName =1 ; 
  string userId = 2;
}

message Response {
  uint32 statusCode = 1;
  string objects = 2;
}